# wasserstein-btc

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PREREGISTRATION.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  replication_report.yml
.github/workflows/: pages.yml  publish-pypi.yml  test.yml
docs/: INDEX.md  RESEARCH_REPORT.md  RESULTS.md  RESULTS_EXTENDED.md  RESULTS_LONG.md  THEORY.md
results/: MANIFEST.json  extended_btc_h1.json  extended_btc_h21.json  extended_btc_h5.json  hyperparam_sweep.csv  long_bnbusdt_h1.json  long_bnbusdt_h21.json  long_bnbusdt_h5.json  long_btcusdt_h1.json  long_btcusdt_h21.json  long_btcusdt_h5.json  long_ethusdt_h1.json  long_ethusdt_h21.json  long_ethusdt_h5.json  long_solusdt_h1.json  long_solusdt_h21.json  long_solusdt_h5.json  long_xrpusdt_h1.json  long_xrpusdt_h21.json  long_xrpusdt_h5.json  var_es_btcusdt_h1_a01.json  var_es_btcusdt_h1_a05.json  var_es_btcusdt_h5_a01.json  var_es_btcusdt_h5_a05.json
scripts/: build_social_preview.py  coverage_check.py  fetch_data.py  hyperparam_sweep.py  launch_monitor.py  patch_v04_methods.py  run_backtest.py  run_extended_baselines.py  run_long_horizon.py  run_var_es_backtest.py  score_new_method.py  summarize_v03.py
src/wbtc/: __init__.py  backtest.py  cli.py  data.py  forecasters.py  long_horizon.py  manifest.py  quantiles.py  report.py  scoring.py  var_es.py
tests/: test_api.py  test_forecasters.py  test_quantiles.py  test_scoring.py  test_var_es.py
viewer/: README.md  build_data.py  serve.py
viewer/cache/: build_returns_cache.py  returns.json
viewer/public/: app.js  index.html  robots.txt  sitemap.xml  styles.css
