[project]
name = "wbtc"
version = "0.2.0"
description = "Tangent-space Wasserstein-geodesic distributional forecasting for crypto returns"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "ccxt>=4.3",
    "pyarrow>=15",
    "arch>=6.3",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "tabulate>=0.10.0",
]

[project.scripts]
wbtc = "wbtc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wbtc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
