[project]
name = "wbtc"
version = "0.4.0"
description = "Tangent-space Wasserstein-geodesic distributional forecasting for crypto returns"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Robin Bohrer (AccursedGalaxy)", email = "robinbohrer7@gmail.com" },
]
keywords = [
    "distributional-forecasting",
    "optimal-transport",
    "wasserstein",
    "wasserstein-barycenter",
    "cryptocurrency",
    "bitcoin",
    "garch",
    "har-rv",
    "caviar",
    "crps",
    "diebold-mariano",
    "quantile-regression",
    "walk-forward-backtesting",
    "econometrics",
    "time-series",
    "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "ccxt>=4.3",
    "pyarrow>=15",
    "arch>=6.3",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "tabulate>=0.10.0",
]

[project.urls]
Homepage = "https://accursedgalaxy.github.io/wasserstein-btc/"
"Live dashboard" = "https://accursedgalaxy.github.io/wasserstein-btc/"
Repository = "https://github.com/AccursedGalaxy/wasserstein-btc"
Issues = "https://github.com/AccursedGalaxy/wasserstein-btc/issues"
Documentation = "https://github.com/AccursedGalaxy/wasserstein-btc/blob/master/docs/INDEX.md"
"Research report" = "https://github.com/AccursedGalaxy/wasserstein-btc/blob/master/docs/RESEARCH_REPORT.md"
"Results (long-horizon)" = "https://github.com/AccursedGalaxy/wasserstein-btc/blob/master/docs/RESULTS_LONG.md"
Changelog = "https://github.com/AccursedGalaxy/wasserstein-btc/blob/master/CHANGELOG.md"

[project.scripts]
wbtc = "wbtc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wbtc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
